Pixel 3a XL Fixed '-fstack-protector-strong not supported by compiler' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2384,6 +2384,10 @@ Partition Table</a><br>
     <a href="phone/pixel3axl/lineageos_build_kernel.htm">
     build kernel 4.9.336</a><br>
     
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pixel3axl/lineageos_fix_sps.htm">
+    解決"-fstack-protector-strong not supported by compiler"問題</a><br>
+    
 <br><br><br><br>
 
 <div id="pinephone"></div>
