Pixel 3a XL Fixed 'Input tree has errors, aborting' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2383,11 +2383,15 @@ Partition Table</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pixel3axl/lineageos_build_kernel.htm">
     build kernel 4.9.336</a><br>
-    
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pixel3axl/lineageos_fix_lto.htm">
     解決"requires clang 5.0 or later"問題</a><br>
-    
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pixel3axl/lineageos_fix_dtc.htm">
+    解決"Input tree has errors, aborting"問題</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pixel3axl/lineageos_fix_sps.htm">
     解決"-fstack-protector-strong not supported by compiler"問題</a><br>
