Ghidra How to scale UI.

--- a/reverse.htm
+++ b/reverse.htm
@@ -254,6 +254,10 @@ Ghidra</h3>
 &lowast;
 <a href="reverse/ghidra/setup.htm">
 安裝環境</a><br>
+
+&lowast;
+<a href="reverse/ghidra/scale.htm">
+如何設定UI Scale成兩倍大</a><br>
 <br><br><br><br>
 
 <div id="ollydbg"></div>
