RG Nano Added view of angle.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4160,6 +4160,10 @@ RG Nano</h3>
 &lowast;
 <a href="handheld/rgnano/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/rgnano/screen.htm">
+可視角</a><br>
 <br><br><br><br>
 
 <div id="pico"></div>
