Ghidra How to build ghidra quickly.

--- a/reverse.htm
+++ b/reverse.htm
@@ -256,6 +256,10 @@ Ghidra</h3>
 安裝環境</a><br>
 
 &lowast;
+<a href="reverse/ghidra/build.htm">
+build ghidra</a><br>
+
+&lowast;
 <a href="reverse/ghidra/scale.htm">
 如何設定UI Scale成兩倍大</a><br>
 <br><br><br><br>
