Astro Slide 5G Refined.

--- a/phone/astro/an_root.htm
+++ b/phone/astro/an_root.htm
@@ -60,6 +60,8 @@ $ sudo pip3 install wheel pyusb pycryptodomex colorama usb shiboken6 pyside6 moc
 
 $ cd
 $ git clone https://github.com/bkerler/mtkclient
+
+$ cd mtkclient
 $ ./mtk r boot_a boot.img
 </pre>
 <p>
