TRIMUI SMART How to turn on/off L2R2 support.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4784,6 +4784,10 @@ GPIO按鍵改造</a><br>
 找出LCD腳位和初始化步驟</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/l2r2.htm">
+如何開啟、關閉L2R2</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/brom.htm">
 如何透過MicroSD進入fel模式</a><br>
 
