RG Nano How to connect handheld via adb shell.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4168,6 +4168,10 @@ RG Nano</h3>
 &lowast;
 <a href="handheld/rgnano/screen.htm">
 可視角</a><br>
+
+&lowast;
+<a href="handheld/rgnano/adb.htm">
+如何透過adb shell連線</a><br>
 <br><br><br><br>
 
 <div id="pico"></div>
