--- a/handheld.htm
+++ b/handheld.htm
@@ -4170,6 +4170,10 @@ RG Nano</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/rgnano/audio.htm">
+如何開啟聲音</a><br>
+
+&lowast;
 <a href="handheld/rgnano/adb.htm">
 如何透過adb shell連線</a><br>
 <br><br><br><br>
