Retroid Pocket 3 Plus Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -216,6 +216,7 @@
     <a href="#x350"><img src="img/photos/x350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="X350"/></a>
     <a href="#xy-8016"><img src="img/photos/xy-8016.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SUPER MARY XY-8016"/></a>
     <a href="#retroid-flip"><img src="img/photos/retroid-flip.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket Flip"/></a>
+    <a href="#retroid-3p"><img src="img/photos/retroid-3p.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket 3 Plus"/></a>
 </p>
 </div>
 
@@ -7212,6 +7213,16 @@ Retroid Pocket Flip</h3>
 &lowast;
 <a href="handheld/retroid-flip/mod.htm">
 十字鍵、仰角改造</a><br>
+<br><br><br><br>
+
+<div id="retroid-3p"></div>
+<h3><img src="img/photos/retroid-3p.jpg" class="floatLeft"/>
+Retroid Pocket 3 Plus</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/retroid-3p/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 </p>
