RetroStone Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -217,6 +217,7 @@
     <a href="#xy-8016"><img src="img/photos/xy-8016.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SUPER MARY XY-8016"/></a>
     <a href="#retroid-flip"><img src="img/photos/retroid-flip.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket Flip"/></a>
     <a href="#retroid-3p"><img src="img/photos/retroid-3p.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket 3 Plus"/></a>
+    <a href="#retrostone"><img src="img/photos/retrostone.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RetroStone"/></a>
 </p>
 </div>
 
@@ -7222,6 +7223,16 @@ Retroid Pocket 3 Plus</h3>
 
 &lowast;
 <a href="handheld/retroid-3p/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
+<div id="retrostone"></div>
+<h3><img src="img/photos/retrostone.jpg" class="floatLeft"/>
+RetroStone</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/retrostone/review.htm">
 介紹</a><br>
 <br><br><br><br>
 
