Retroid Pocket 3 Plus Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -7224,6 +7224,10 @@ Retroid Pocket 3 Plus</h3>
 &lowast;
 <a href="handheld/retroid-3p/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/retroid-3p/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="retrostone"></div>
