Retroid Pocket 3 Plus Refined.

--- a/handheld/retroid-3p/teardown.htm
+++ b/handheld/retroid-3p/teardown.htm
@@ -61,10 +61,10 @@ MicroSD、USB Type-C、耳機孔<br>
 音量按鍵<br>
 <img src="teardown/4.jpg" class="maxSize"><br><br>
 
-SELECT、START、MicroHDMI、功能按鍵<br>
+SELECT、START、MicroHDMI、電源按鍵<br>
 <img src="teardown/5.jpg" class="maxSize"><br><br>
 
-電源按鍵<br>
+HOME<br>
 <img src="teardown/6.jpg" class="maxSize"><br><br>
 
 背面<br>
