RetroStone Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -7238,6 +7238,10 @@ RetroStone</h3>
 &lowast;
 <a href="handheld/retrostone/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/retrostone/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 </p>
