--- a/handheld.htm
+++ b/handheld.htm
@@ -4176,6 +4176,10 @@ RG Nano</h3>
 如何開啟聲音</a><br>
 
 &lowast;
+<a href="handheld/rgnano/ssh.htm">
+如何透過ssh連線</a><br>
+
+&lowast;
 <a href="handheld/rgnano/adb.htm">
 如何透過adb shell連線</a><br>
 <br><br><br><br>
