Q2 Added screen images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -218,6 +218,7 @@
     <a href="#retroid-flip"><img src="img/photos/retroid-flip.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket Flip"/></a>
     <a href="#retroid-3p"><img src="img/photos/retroid-3p.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Retroid Pocket 3 Plus"/></a>
     <a href="#retrostone"><img src="img/photos/retrostone.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RetroStone"/></a>
+    <a href="#q2"><img src="img/photos/q2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Q2"/></a>
 </p>
 </div>
 
@@ -7246,6 +7247,16 @@ RetroStone</h3>
 &lowast;
 <a href="handheld/retrostone/teardown.htm">
 拆機</a><br>
+<br><br><br><br>
+
+<div id="q2"></div>
+<h3><img src="img/photos/q2.jpg" class="floatLeft"/>
+Q2</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/q2/screen.htm">
+可視角</a><br>
 <br><br><br><br>
 
 </p>
