Q2 Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -7255,6 +7255,10 @@ Q2</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/q2/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/q2/screen.htm">
 可視角</a><br>
 <br><br><br><br>
