Q2 How to solder UART.

--- a/handheld.htm
+++ b/handheld.htm
@@ -7261,6 +7261,10 @@ Q2</h3>
 &lowast;
 <a href="handheld/q2/screen.htm">
 可視角</a><br>
+
+&lowast;
+<a href="handheld/q2/uart.htm">
+焊接UART</a><br>
 <br><br><br><br>
 
 </p>
