Q2 How to boot into flash mode.

--- a/handheld.htm
+++ b/handheld.htm
@@ -7265,6 +7265,10 @@ Q2</h3>
 &lowast;
 <a href="handheld/q2/uart.htm">
 焊接UART</a><br>
+
+&lowast;
+<a href="handheld/q2/bootmode.htm">
+如何進入燒錄模式</a><br>
 <br><br><br><br>
 
 </p>
