Miyoo Mini How to debug through jack port.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6695,6 +6695,10 @@ SDL Key</a><br>
 焊接UART腳位</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini/uart_jack.htm">
+焊接UART腳位(耳機孔)</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini/uart_pl2303.htm">
 焊接UART腳位(PL-2303SA)</a><br>
 
