France Added Paris images.

--- a/index.htm
+++ b/index.htm
@@ -74,6 +74,7 @@
 <div id="page">
 <br><br>
 <p>
+    <a href="#french"><img src="img/photos/france.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="法國"/></a>
     <a href="#italy"><img src="img/photos/italy.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="義大利"/></a>
 </p>
 </div>
@@ -81,6 +82,19 @@
 <div id="page">
 <br><br>
 <p>
+<div id="french"></div>
+<h3><img src="img/photos/france.jpg" class="floatLeft"/>
+法國</h3>
+<hr size="1"><br><br><br><br><br>
+
+    &oplus;
+    2024-02<br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="trip/france/paris.htm">
+        巴黎</a><br>
+<br><br><br><br>
+
 <div id="italy"></div>
 <h3><img src="img/photos/italy.jpg" class="floatLeft"/>
 義大利</h3>
