--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -65,18 +65,37 @@ Galeries Lafayette<br>
 <img src="paris/7.jpg" class="maxSize"><br>
 <img src="paris/8.jpg" class="maxSize"><br><br>
 
+瑪德蓮教堂<br>
 <img src="paris/9.jpg" class="maxSize"><br><br>
+
+協和廣場<br>
 <img src="paris/10.jpg" class="maxSize"><br><br>
+
+香榭麗舍大道<br>
 <img src="paris/11.jpg" class="maxSize"><br><br>
+
+大皇宮<br>
 <img src="paris/12.jpg" class="maxSize"><br><br>
+
+小皇宮<br>
 <img src="paris/13.jpg" class="maxSize"><br><br>
-<img src="paris/14.jpg" class="maxSize"><br><br>
+
+沿途建築<br>
+<img src="paris/14.jpg" class="maxSize"><br>
 <img src="paris/15.jpg" class="maxSize"><br><br>
+
+凱旋門<br>
 <img src="paris/16.jpg" class="maxSize"><br><br>
-<img src="paris/17.jpg" class="maxSize"><br><br>
+
+艾榭麗舍宮<br>
+<img src="paris/17.jpg" class="maxSize"><br>
 <img src="paris/18.jpg" class="maxSize"><br><br>
+
+沿途建築<br>
 <img src="paris/19.jpg" class="maxSize"><br><br>
-<img src="paris/20.jpg" class="maxSize"><br><br>
+
+凡登廣場<br>
+<img src="paris/20.jpg" class="maxSize"><br>
 <img src="paris/21.jpg" class="maxSize"><br><br>
 </p>
 
