--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -97,39 +97,81 @@ Galeries Lafayette<br>
 凡登廣場<br>
 <img src="paris/20.jpg" class="maxSize"><br>
 <img src="paris/21.jpg" class="maxSize"><br><br>
+
+晨間的美景<br>
 <img src="paris/22.jpg" class="maxSize"><br><br>
+
+和平咖啡館<br>
 <img src="paris/23.jpg" class="maxSize"><br><br>
+
+巴黎人早餐<br>
 <img src="paris/24.jpg" class="maxSize"><br><br>
+
+地鐵的尿騷味道還是相當重<br>
 <img src="paris/25.jpg" class="maxSize"><br><br>
+
+雖然不常遇到，不過偶爾會在中途暫停一下<br>
 <img src="paris/26.jpg" class="maxSize"><br><br>
-<img src="paris/27.jpg" class="maxSize"><br><br>
-<img src="paris/28.jpg" class="maxSize"><br><br>
-<img src="paris/29.jpg" class="maxSize"><br><br>
+
+在植物園裡面的一個博物館，相當適合帶小朋友來參觀<br>
+<img src="paris/27.jpg" class="maxSize"><br>
+<img src="paris/28.jpg" class="maxSize"><br>
+<img src="paris/29.jpg" class="maxSize"><br>
 <img src="paris/30.jpg" class="maxSize"><br><br>
-<img src="paris/31.jpg" class="maxSize"><br><br>
-<img src="paris/32.jpg" class="maxSize"><br><br>
-<img src="paris/33.jpg" class="maxSize"><br><br>
+
+皇家花園<br>
+<img src="paris/31.jpg" class="maxSize"><br>
+<img src="paris/32.jpg" class="maxSize"><br>
+<img src="paris/33.jpg" class="maxSize"><br>
 <img src="paris/34.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
 <img src="paris/35.jpg" class="maxSize"><br><br>
+
+懷念的珍珠茶<br>
 <img src="paris/36.jpg" class="maxSize"><br><br>
+
+漂亮的公園<br>
 <img src="paris/37.jpg" class="maxSize"><br><br>
-<img src="paris/38.jpg" class="maxSize"><br><br>
-<img src="paris/39.jpg" class="maxSize"><br><br>
-<img src="paris/40.jpg" class="maxSize"><br><br>
-<img src="paris/41.jpg" class="maxSize"><br><br>
+
+羅浮宮，因為上次已經進去過了，所以這次只有拍拍外面的建築<br>
+<img src="paris/38.jpg" class="maxSize"><br>
+<img src="paris/39.jpg" class="maxSize"><br>
+<img src="paris/40.jpg" class="maxSize"><br>
+<img src="paris/41.jpg" class="maxSize"><br>
 <img src="paris/42.jpg" class="maxSize"><br><br>
+
+協和橋，建議從這邊開始走路到艾菲爾鐵塔，因為沿路的景色相當不錯<br>
 <img src="paris/43.jpg" class="maxSize"><br><br>
-<img src="paris/44.jpg" class="maxSize"><br><br>
+
+奧賽美術館<br>
+<img src="paris/44.jpg" class="maxSize"><br>
 <img src="paris/45.jpg" class="maxSize"><br><br>
+
+大使館<br>
 <img src="paris/46.jpg" class="maxSize"><br><br>
+
+亞歷山大三世橋<br>
 <img src="paris/47.jpg" class="maxSize"><br><br>
-<img src="paris/48.jpg" class="maxSize"><br><br>
+
+艾菲爾鐵塔<br>
+<img src="paris/48.jpg" class="maxSize"><br>
 <img src="paris/49.jpg" class="maxSize"><br><br>
+
+比爾阿克姆橋，電影(全面啟動)的場景<br>
 <img src="paris/50.jpg" class="maxSize"><br><br>
+
+怎麼拍都好看的鐵塔<br>
 <img src="paris/51.jpg" class="maxSize"><br><br>
-<img src="paris/52.jpg" class="maxSize"><br><br>
+
+晚上坐船看夜景，邊吃晚餐邊看夜景，搭完的心得就是：CP值不高，還是建議搭乘沒有晚餐的旅遊船<br>
+<img src="paris/52.jpg" class="maxSize"><br>
 <img src="paris/53.jpg" class="maxSize"><br><br>
+
+看台上的視野還是最棒的<br>
 <img src="paris/54.jpg" class="maxSize"><br><br>
+
+整點會閃爍的艾菲爾鐵塔<br>
 <img src="paris/55.jpg" class="maxSize"><br><br>
 </p>
 
