"Paris Added more images."

--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -123,7 +123,8 @@ Galeries Lafayette<br>
 <img src="paris/31.jpg" class="maxSize"><br>
 <img src="paris/32.jpg" class="maxSize"><br>
 <img src="paris/33.jpg" class="maxSize"><br>
-<img src="paris/34.jpg" class="maxSize"><br><br>
+<img src="paris/34.jpg" class="maxSize"><br>
+<img src="paris/69.jpg" class="maxSize"><br><br>
 
 沿路美景<br>
 <img src="paris/35.jpg" class="maxSize"><br><br>
@@ -173,6 +174,20 @@ Galeries Lafayette<br>
 
 整點會閃爍的艾菲爾鐵塔<br>
 <img src="paris/55.jpg" class="maxSize"><br><br>
+
+<img src="paris/56.jpg" class="maxSize"><br><br>
+<img src="paris/57.jpg" class="maxSize"><br><br>
+<img src="paris/58.jpg" class="maxSize"><br><br>
+<img src="paris/59.jpg" class="maxSize"><br><br>
+<img src="paris/60.jpg" class="maxSize"><br><br>
+<img src="paris/62.jpg" class="maxSize"><br><br>
+<img src="paris/61.jpg" class="maxSize"><br><br>
+<img src="paris/63.jpg" class="maxSize"><br><br>
+<img src="paris/64.jpg" class="maxSize"><br><br>
+<img src="paris/65.jpg" class="maxSize"><br><br>
+<img src="paris/66.jpg" class="maxSize"><br><br>
+<img src="paris/67.jpg" class="maxSize"><br><br>
+<img src="paris/68.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
