--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -113,7 +113,7 @@ Galeries Lafayette<br>
 雖然不常遇到，不過偶爾會在中途暫停一下<br>
 <img src="paris/26.jpg" class="maxSize"><br><br>
 
-在植物園裡面的一個博物館，相當適合帶小朋友來參觀<br>
+在植物園裡面的自然史博物館，相當適合帶小朋友來參觀<br>
 <img src="paris/27.jpg" class="maxSize"><br>
 <img src="paris/28.jpg" class="maxSize"><br>
 <img src="paris/29.jpg" class="maxSize"><br>
@@ -123,7 +123,9 @@ Galeries Lafayette<br>
 <img src="paris/31.jpg" class="maxSize"><br>
 <img src="paris/32.jpg" class="maxSize"><br>
 <img src="paris/33.jpg" class="maxSize"><br>
-<img src="paris/34.jpg" class="maxSize"><br>
+<img src="paris/34.jpg" class="maxSize"><br><br>
+
+夜晚的皇家花園<br>
 <img src="paris/69.jpg" class="maxSize"><br><br>
 
 沿路美景<br>
@@ -135,7 +137,7 @@ Galeries Lafayette<br>
 漂亮的公園<br>
 <img src="paris/37.jpg" class="maxSize"><br><br>
 
-羅浮宮，因為上次已經進去過了，所以這次只有拍拍外面的建築<br>
+羅浮宮<br>
 <img src="paris/38.jpg" class="maxSize"><br>
 <img src="paris/39.jpg" class="maxSize"><br>
 <img src="paris/40.jpg" class="maxSize"><br>
@@ -175,18 +177,35 @@ Galeries Lafayette<br>
 整點會閃爍的艾菲爾鐵塔<br>
 <img src="paris/55.jpg" class="maxSize"><br><br>
 
+Galeries Lafayette樓頂有免費的看台<br>
 <img src="paris/56.jpg" class="maxSize"><br><br>
+
+漂亮的Dome<br>
 <img src="paris/57.jpg" class="maxSize"><br><br>
+
+巴黎證卷交易所<br>
 <img src="paris/58.jpg" class="maxSize"><br><br>
+
+沿途美景<br>
 <img src="paris/59.jpg" class="maxSize"><br><br>
-<img src="paris/60.jpg" class="maxSize"><br><br>
-<img src="paris/62.jpg" class="maxSize"><br><br>
+
+龐畢度中心<br>
+<img src="paris/60.jpg" class="maxSize"><br>
+<img src="paris/62.jpg" class="maxSize"><br>
 <img src="paris/61.jpg" class="maxSize"><br><br>
-<img src="paris/63.jpg" class="maxSize"><br><br>
+
+巴黎市政廳<br>
+<img src="paris/63.jpg" class="maxSize"><br>
 <img src="paris/64.jpg" class="maxSize"><br><br>
+
+BHV百貨<br>
 <img src="paris/65.jpg" class="maxSize"><br><br>
+
+漂亮的鐘樓<br>
 <img src="paris/66.jpg" class="maxSize"><br><br>
-<img src="paris/67.jpg" class="maxSize"><br><br>
+
+Samaritaine百貨<br>
+<img src="paris/67.jpg" class="maxSize"><br>
 <img src="paris/68.jpg" class="maxSize"><br><br>
 </p>
 
