Paris Added more images.

--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -207,6 +207,28 @@ BHV百貨<br>
 Samaritaine百貨<br>
 <img src="paris/67.jpg" class="maxSize"><br>
 <img src="paris/68.jpg" class="maxSize"><br><br>
+
+<img src="paris/70.jpg" class="maxSize"><br><br>
+<img src="paris/71.jpg" class="maxSize"><br><br>
+<img src="paris/72.jpg" class="maxSize"><br><br>
+<img src="paris/73.jpg" class="maxSize"><br><br>
+<img src="paris/74.jpg" class="maxSize"><br><br>
+<img src="paris/75.jpg" class="maxSize"><br><br>
+<img src="paris/76.jpg" class="maxSize"><br><br>
+<img src="paris/77.jpg" class="maxSize"><br><br>
+<img src="paris/78.jpg" class="maxSize"><br><br>
+<img src="paris/79.jpg" class="maxSize"><br><br>
+<img src="paris/80.jpg" class="maxSize"><br><br>
+<img src="paris/81.jpg" class="maxSize"><br><br>
+<img src="paris/82.jpg" class="maxSize"><br><br>
+<img src="paris/83.jpg" class="maxSize"><br><br>
+<img src="paris/84.jpg" class="maxSize"><br><br>
+<img src="paris/85.jpg" class="maxSize"><br><br>
+<img src="paris/86.jpg" class="maxSize"><br><br>
+<img src="paris/87.jpg" class="maxSize"><br><br>
+<img src="paris/88.jpg" class="maxSize"><br><br>
+<img src="paris/89.jpg" class="maxSize"><br><br>
+<img src="paris/90.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
