--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -52,10 +52,10 @@
 沒記錯的話，這應該是司徒第三次來巴黎旅遊，而印象最深刻的事情莫過於海關的通關速度，不過這次又讓司徒留下一個更深刻的印象，那就是機場WIFI無法使用(全機場WIFI故障)，然後更尷尬的是，eSIM是需要有網路連接時才可以加入使用，因此，建議大家提前一天加入eSIM設定<br>
 <img src="paris/1.jpg" class="maxSize"><br><br>
 
-入住的地方是位於Galeries Lafayette旁邊的旅館，CP值算是相當不錯<br>
+入住的地方是位於拉法葉百貨旁邊的旅館<br>
 <img src="paris/2.jpg" class="maxSize"><br><br>
 
-Galeries Lafayette<br>
+拉法葉百貨<br>
 <img src="paris/3.jpg" class="maxSize"><br><br>
 
 歌劇院<br>
@@ -123,7 +123,8 @@ Galeries Lafayette<br>
 <img src="paris/31.jpg" class="maxSize"><br>
 <img src="paris/32.jpg" class="maxSize"><br>
 <img src="paris/33.jpg" class="maxSize"><br>
-<img src="paris/34.jpg" class="maxSize"><br><br>
+<img src="paris/34.jpg" class="maxSize"><br>
+<img src="paris/88.jpg" class="maxSize"><br><br>
 
 夜晚的皇家花園<br>
 <img src="paris/69.jpg" class="maxSize"><br><br>
@@ -144,12 +145,30 @@ Galeries Lafayette<br>
 <img src="paris/41.jpg" class="maxSize"><br>
 <img src="paris/42.jpg" class="maxSize"><br><br>
 
+夜晚的羅浮宮<br>
+<img src="paris/123.jpg" class="maxSize"><br>
+<img src="paris/124.jpg" class="maxSize"><br><br>
+
 協和橋，建議從這邊開始走路到艾菲爾鐵塔，因為沿路的景色相當不錯<br>
 <img src="paris/43.jpg" class="maxSize"><br><br>
 
 奧賽美術館<br>
 <img src="paris/44.jpg" class="maxSize"><br>
 <img src="paris/45.jpg" class="maxSize"><br><br>
+
+地獄門<br>
+<img src="paris/117.jpg" class="maxSize"><br><br>
+
+舊車站的樣貌<br>
+<img src="paris/118.jpg" class="maxSize"><br><br>
+
+美圖<br>
+<img src="paris/119.jpg" class="maxSize"><br>
+<img src="paris/120.jpg" class="maxSize"><br>
+<img src="paris/121.jpg" class="maxSize"><br><br>
+
+夜晚的美術館<br>
+<img src="paris/122.jpg" class="maxSize"><br><br>
 
 大使館<br>
 <img src="paris/46.jpg" class="maxSize"><br><br>
@@ -167,7 +186,7 @@ Galeries Lafayette<br>
 怎麼拍都好看的鐵塔<br>
 <img src="paris/51.jpg" class="maxSize"><br><br>
 
-晚上坐船看夜景，邊吃晚餐邊看夜景，搭完的心得就是：CP值不高，還是建議搭乘沒有晚餐的旅遊船<br>
+晚上坐船看夜景，邊吃晚餐邊看夜景，搭完的心得就是：建議搭乘沒有晚餐的旅遊船<br>
 <img src="paris/52.jpg" class="maxSize"><br>
 <img src="paris/53.jpg" class="maxSize"><br><br>
 
@@ -177,14 +196,15 @@ Galeries Lafayette<br>
 整點會閃爍的艾菲爾鐵塔<br>
 <img src="paris/55.jpg" class="maxSize"><br><br>
 
-Galeries Lafayette樓頂有免費的看台<br>
+拉法葉百貨樓頂上有免費的看台<br>
 <img src="paris/56.jpg" class="maxSize"><br><br>
 
 漂亮的Dome<br>
 <img src="paris/57.jpg" class="maxSize"><br><br>
 
 巴黎證卷交易所<br>
-<img src="paris/58.jpg" class="maxSize"><br><br>
+<img src="paris/58.jpg" class="maxSize"><br>
+<img src="paris/91.jpg" class="maxSize"><br><br>
 
 沿途美景<br>
 <img src="paris/59.jpg" class="maxSize"><br><br>
@@ -208,27 +228,84 @@ Samaritaine百貨<br>
 <img src="paris/67.jpg" class="maxSize"><br>
 <img src="paris/68.jpg" class="maxSize"><br><br>
 
+漂亮的道路<br>
 <img src="paris/70.jpg" class="maxSize"><br><br>
-<img src="paris/71.jpg" class="maxSize"><br><br>
-<img src="paris/72.jpg" class="maxSize"><br><br>
-<img src="paris/73.jpg" class="maxSize"><br><br>
-<img src="paris/74.jpg" class="maxSize"><br><br>
-<img src="paris/75.jpg" class="maxSize"><br><br>
-<img src="paris/76.jpg" class="maxSize"><br><br>
+
+Marmottan Monet美術館<br>
+<img src="paris/71.jpg" class="maxSize"><br>
+<img src="paris/72.jpg" class="maxSize"><br>
+<img src="paris/73.jpg" class="maxSize"><br>
+<img src="paris/74.jpg" class="maxSize"><br>
+<img src="paris/75.jpg" class="maxSize"><br>
+<img src="paris/76.jpg" class="maxSize"><br>
 <img src="paris/77.jpg" class="maxSize"><br><br>
-<img src="paris/78.jpg" class="maxSize"><br><br>
-<img src="paris/79.jpg" class="maxSize"><br><br>
-<img src="paris/80.jpg" class="maxSize"><br><br>
-<img src="paris/81.jpg" class="maxSize"><br><br>
-<img src="paris/82.jpg" class="maxSize"><br><br>
-<img src="paris/83.jpg" class="maxSize"><br><br>
-<img src="paris/84.jpg" class="maxSize"><br><br>
-<img src="paris/85.jpg" class="maxSize"><br><br>
+
+海軍府<br>
+<img src="paris/78.jpg" class="maxSize"><br>
+<img src="paris/79.jpg" class="maxSize"><br>
+<img src="paris/80.jpg" class="maxSize"><br>
+<img src="paris/81.jpg" class="maxSize"><br>
+<img src="paris/82.jpg" class="maxSize"><br>
+<img src="paris/83.jpg" class="maxSize"><br>
+<img src="paris/84.jpg" class="maxSize"><br>
+<img src="paris/85.jpg" class="maxSize"><br>
 <img src="paris/86.jpg" class="maxSize"><br><br>
+
+還不錯吃的咖哩飯<br>
 <img src="paris/87.jpg" class="maxSize"><br><br>
-<img src="paris/88.jpg" class="maxSize"><br><br>
-<img src="paris/89.jpg" class="maxSize"><br><br>
+
+Saint-Eustache教堂<br>
+<img src="paris/89.jpg" class="maxSize"><br>
 <img src="paris/90.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
+<img src="paris/92.jpg" class="maxSize"><br><br>
+
+腳踏車的數量真的很多，晚上過馬路時，記得注意一下<br>
+<img src="paris/93.jpg" class="maxSize"><br><br>
+
+巴士底廣場市集<br>
+<img src="paris/94.jpg" class="maxSize"><br>
+<img src="paris/95.jpg" class="maxSize"><br><br>
+
+孚日廣場<br>
+<img src="paris/96.jpg" class="maxSize"><br>
+<img src="paris/97.jpg" class="maxSize"><br><br>
+
+卡納瓦雷博物館<br>
+<img src="paris/98.jpg" class="maxSize"><br>
+<img src="paris/99.jpg" class="maxSize"><br>
+<img src="paris/100.jpg" class="maxSize"><br>
+<img src="paris/101.jpg" class="maxSize"><br>
+<img src="paris/102.jpg" class="maxSize"><br>
+<img src="paris/103.jpg" class="maxSize"><br>
+<img src="paris/104.jpg" class="maxSize"><br><br>
+
+台灣餐廳
+<img src="paris/105.jpg" class="maxSize"><br>
+<img src="paris/106.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
+<img src="paris/107.jpg" class="maxSize"><br>
+<img src="paris/108.jpg" class="maxSize"><br>
+<img src="paris/109.jpg" class="maxSize"><br><br>
+
+聖母院<br>
+<img src="paris/110.jpg" class="maxSize"><br>
+<img src="paris/111.jpg" class="maxSize"><br><br>
+
+沙士比亞書店<br>
+<img src="paris/112.jpg" class="maxSize"><br><br>
+
+聖米歇爾噴泉<br>
+<img src="paris/113.jpg" class="maxSize"><br><br>
+
+花神咖啡<br>
+<img src="paris/114.jpg" class="maxSize"><br><br>
+
+台灣辦事處<br>
+<img src="paris/115.jpg" class="maxSize"><br>
+<img src="paris/116.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
