--- a/trip/france/paris.htm
+++ b/trip/france/paris.htm
@@ -281,7 +281,7 @@ Saint-Eustache教堂<br>
 <img src="paris/103.jpg" class="maxSize"><br>
 <img src="paris/104.jpg" class="maxSize"><br><br>
 
-台灣餐廳
+台灣料理<br>
 <img src="paris/105.jpg" class="maxSize"><br>
 <img src="paris/106.jpg" class="maxSize"><br><br>
 
@@ -307,23 +307,32 @@ Saint-Eustache教堂<br>
 <img src="paris/115.jpg" class="maxSize"><br>
 <img src="paris/116.jpg" class="maxSize"><br><br>
 
-<img src="paris/125.jpg" class="maxSize"><br><br>
-<img src="paris/126.jpg" class="maxSize"><br><br>
-<img src="paris/127.jpg" class="maxSize"><br><br>
-<img src="paris/128.jpg" class="maxSize"><br><br>
+拱廊街<br>
+<img src="paris/125.jpg" class="maxSize"><br>
+<img src="paris/126.jpg" class="maxSize"><br>
 <img src="paris/129.jpg" class="maxSize"><br><br>
-<img src="paris/130.jpg" class="maxSize"><br><br>
-<img src="paris/131.jpg" class="maxSize"><br><br>
-<img src="paris/132.jpg" class="maxSize"><br><br>
-<img src="paris/133.jpg" class="maxSize"><br><br>
-<img src="paris/134.jpg" class="maxSize"><br><br>
-<img src="paris/135.jpg" class="maxSize"><br><br>
-<img src="paris/136.jpg" class="maxSize"><br><br>
-<img src="paris/137.jpg" class="maxSize"><br><br>
+
+除夕夜圍爐的好地方<br>
+<img src="paris/127.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
+<img src="paris/128.jpg" class="maxSize"><br><br>
+
+聖心堂<br>
+<img src="paris/130.jpg" class="maxSize"><br>
+<img src="paris/131.jpg" class="maxSize"><br>
+<img src="paris/132.jpg" class="maxSize"><br>
+<img src="paris/133.jpg" class="maxSize"><br>
+<img src="paris/134.jpg" class="maxSize"><br>
+<img src="paris/135.jpg" class="maxSize"><br>
+<img src="paris/136.jpg" class="maxSize"><br>
+<img src="paris/137.jpg" class="maxSize"><br>
 <img src="paris/138.jpg" class="maxSize"><br><br>
-<img src="paris/139.jpg" class="maxSize"><br><br>
-<img src="paris/140.jpg" class="maxSize"><br><br>
-<img src="paris/141.jpg" class="maxSize"><br><br>
+
+春天百貨上的看台<br>
+<img src="paris/139.jpg" class="maxSize"><br>
+<img src="paris/140.jpg" class="maxSize"><br>
+<img src="paris/141.jpg" class="maxSize">
 </p>
 
 <p>
