--- a/index.htm
+++ b/index.htm
@@ -66,9 +66,9 @@
 <br><br>
 <p>
     <a href="#pyra"><img src="img/photos/pyra.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pyra"/></a>
-    <a href="#pandora1"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora 1GHz"/></a>
-    <a href="#pandora2"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora Rebirth"/></a>
-    <a href="#pandora3"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora Classic"/></a>
+    <a href="#pandora1"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora (1GHz)"/></a>
+    <a href="#pandora2"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora (Rebirth)"/></a>
+    <a href="#pandora3"><img src="img/photos/pandora.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Pandora (Classic)"/></a>
     <a href="#gaviar"><img src="img/photos/gaviar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gaviar (小志掌機)"/></a>
     <a href="#handmade01"><img src="img/photos/handmade01.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Handmade01 (黑妹01)"/></a>
     <a href="#wiz"><img src="img/photos/wiz.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GP2X Wiz"/></a>
@@ -333,40 +333,93 @@ Build Kernel</a><br>
 
 <div id="pandora1"></div>
 <h3><img src="img/photos/pandora.jpg" class="floatLeft"/>
-Pandora 1GHz</h3>
+Pandora (1GHz)</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/pandora_1ghz_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/teardown.htm">
+&dash;
+<a href="handheld/pandora_1ghz_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/material.htm">
-新材料</a><br>
+&dash;
+<a href="handheld/pandora_1ghz_new_lcd.htm">
+新屏</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/uart.htm">
+&dash;
+<a href="handheld/pandora_1ghz_uart.htm">
 UART傳輸線</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/screen.htm">
+&dash;
+<a href="handheld/pandora_1ghz_fix_angle.htm">
 修改螢幕仰角</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/battery.htm">
+&dash;
+<a href="handheld/pandora_1ghz_fix_battery.htm">
 如何固定電池</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/lr.htm">
-如何改善L、R按鈕問題</a><br>
+&dash;
+<a href="handheld/pandora_1ghz_fix_lr.htm">
+如何解決L、R按鍵卡死問題</a><br>
 
-&lowast;
-<a href="handheld/pandora/1ghz/miniusb.htm">
-如何透過MiniUSB連接USB裝置</a><br>
+&dash;
+<a href="handheld/pandora_1ghz_usb.htm">
+如何透過USB Mini B連接USB裝置</a><br>
+
+&oplus;
+<b>Ubuntu</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_ubuntu_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Slackware</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/slackware/setup.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>SuperZaxxon</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/chinese.htm">
+    中文化輸入法</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/android.htm">
+    使用Android系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/ram_speed.htm">
+    調整GPU、RAM速度</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/refresh_menu.htm">
+    如何刷新Menu</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/bluetooth.htm">
+    如何透過藍牙接收檔案</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/debian.htm">
+    如何同時使用Debian系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/screen_setting.htm">
+    如何設定到最佳的顯示顏色</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pandora/1ghz/superzaxxon/mount_sd_utf8.htm">
+    如何讓SDCard可以顯示中文檔名</a><br>
 
 &oplus;
 <b>Debian Mark2</b><br>
@@ -442,58 +495,6 @@ UART傳輸線</a><br>
     <a href="handheld/pandora/1ghz/mark3/setup.htm">
     安裝系統</a><br>
 
-&oplus;
-<b>Ubuntu</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/ubuntu/setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Slackware</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/slackware/setup.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>SuperZaxxon</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/setup.htm">
-    安裝系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/chinese.htm">
-    中文化輸入法</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/android.htm">
-    使用Android系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/ram_speed.htm">
-    調整GPU、RAM速度</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/refresh_menu.htm">
-    如何刷新Menu</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/bluetooth.htm">
-    如何透過藍牙接收檔案</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/debian.htm">
-    如何同時使用Debian系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/screen_setting.htm">
-    如何設定到最佳的顯示顏色</a><br>
-    
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/mount_sd_utf8.htm">
-    如何讓SDCard可以顯示中文檔名</a>
 <br><br><br><br>
 
 <div id="pandora2"></div>
