--- a/index.htm
+++ b/index.htm
@@ -378,47 +378,47 @@ UART傳輸線</a><br>
 &oplus;
 <b>Slackware</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/slackware/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_slackware_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>SuperZaxxon</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/chinese.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_cht.htm">
     中文化輸入法</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/android.htm">
-    使用Android系統</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_android.htm">
+    執行Android系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/ram_speed.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_ram_speed.htm">
     調整GPU、RAM速度</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/refresh_menu.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_refresh_menu.htm">
     如何刷新Menu</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/bluetooth.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_bluetooth.htm">
     如何透過藍牙接收檔案</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/debian.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_screen_setting.htm">
+    如何設定最佳的顯示顏色</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_debian.htm">
     如何同時使用Debian系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/screen_setting.htm">
-    如何設定到最佳的顯示顏色</a><br>
-    
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/superzaxxon/mount_sd_utf8.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_mount_sd_utf8.htm">
     如何讓SDCard可以顯示中文檔名</a><br>
 
 &oplus;
