--- a/index.htm
+++ b/index.htm
@@ -422,22 +422,18 @@ UART傳輸線</a><br>
     如何讓SDCard可以顯示中文檔名</a><br>
 
 &oplus;
-<b>Debian Mark2</b><br>
+<b>Debian (Mark2)</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/mount_pnd.htm">
-    如何掛載PND檔案</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/mount_flash.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_mount_flash.htm">
     掛載主板上的Flash</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/sbox.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_sbox.htm">
     架設ScratchBox環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
@@ -459,6 +455,10 @@ UART傳輸線</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/pandora/1ghz/mark2/fix_qtcreator.htm">
     解決qtcreator的"initialize OpenGL"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_mount_pnd.htm">
+    如何掛載PND檔案</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/pandora/1ghz/mark2/pidgin_line.htm">
