--- a/handheld/pandora_1ghz_mark2_sbox.htm
+++ b/handheld/pandora_1ghz_mark2_sbox.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,39 +20,30 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
+  <script type="text/javascript" src="../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora 1GHz &gt;&gt; Debian Mark2</h3>
-<p><b>架設Scratchbox環境</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - Debian (Mark2) - <b>架設ScratchBox環境</b></h3>
 <hr size="1">
+<br>
 <p>
-最快的chroot製作方式就是從SuperZaxxon系統複製，然後再進行客制化，如下步驟：
+製作方式就是從SuperZaxxon系統複製檔案，然後再進行客制化，步驟如下：
 </p>
 <pre>
 $ su
-# opkg install mtd-utils
+# apt-get install mtd-utils
 # ubiattach -m 4 -d 0
 # mount -t ubifs /dev/ubi0_0 /mnt
 # ubiattach -m 3 -d 1
@@ -68,17 +58,13 @@ $ su
 <p>
 P.S. xxx是使用者名字<br><br>
 
-接著寫一個簡單的chroot script，方便login
+/sbox/login.sh
 </p>
-
 <pre>
-$ sudo vim /sbox/login
-</pre>
-<pre class="brush:cpp">
 #!/bin/sh
 if [ `whoami` != "root" ];then
- echo "Run me as root"
- exit 1
+    echo "Run me as root"
+    exit 1
 fi
 
 MYPATH=`dirname $0`
@@ -107,12 +93,8 @@ sbox:~$ sudo opkg update
 sbox:~$ sudo opkg install gcc gcc-symlinks make binutils-dev cpp cpp-symlinks 
 sbox:~$ sudo opkg install g++ g++-symlinks libstdc++-dev git u-boot-mkimage
 sbox:~$ sudo opkg install libsdl-1.2-dev libsdl-image-1.2-dev libsdl-gfx-dev libsdl-net-1.2-dev libsdl-ttf-2.0-dev libgles-omap3-dev
-</pre><br>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+</pre>
+<br>
 </div>
 </div>
 </div>
